begin auth in gapi
