# gapi/authorization.go
@@ -1,0 +1,10 @@
+package gapi
+
+import (
+	"context"
+	"github.com/vexsx/Simple-Bank/token"
+)
+
+func (server *Server) authorizeUser(ctx context.Context) (*token.Payload, error) {
+
+}
